fix mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -34,20 +34,21 @@ header {
     max-width: 1000px;
     margin: auto;
     display: grid;
-    grid-template-columns: 500px 1fr;
+    grid-template-columns: 1fr 200px;
     grid-auto-rows: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .nav-flex {
     display: flex;
-    justify-content: flex-end;
-    padding-top: 20px;
+    /* justify-content: flex-end; */
+    justify-content: space-between;
+    padding-top: 10px;
     /* align-items: flex-end; */
 }
 
 .nav-item {
     /* text-align: right; */
-    padding: 20px 10px 0px 40px;
+    padding: 0px 10px 0px 10px;
     
 }
 
@@ -93,18 +94,25 @@ h1 {
     color: var(--darker-grey);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 720px) {
+    header {
+        margin: 5px auto 5px auto;
+    }
     h1 {
-        font-size: 45px;
+        /* font-size: 45px; */
     }
     .nav {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr) );
+        /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr) ); */
+        grid-template-columns: 1fr;
     }
     .nav-flex {
         /* flex-direction: column; */
+        
+
     }
     .nav-item {
         /* text-align: right; */
+        /* padding: 0px 10px 0px 10px; */
     }
 }
 
@@ -204,7 +212,7 @@ a:hover {
 
 .the-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
     margin: 10px;
